--- a/text.html
+++ b/text.html
@@ -5,21 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Snow Effect</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="styles.css">
+  <script src="textSnow.js" defer></script>
+  <title>Text Snow</title>
 </head>
 
 <body>
-  <main>
-    <h1>HTML/JS Snow Effect</h1>
-    <div id="links">
-      <a href="/text.html">Text</a>
-      <a href="/canvas.html">Canvas</a>
-    </div>
-  </main>
+  <div id="stars">
+  </div>
 </body>
 
 </html>
