--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <main>
     <h1>HTML/JS Snow Effect</h1>
     <div id="links">
-      <a href="/text.html">Text</a>
-      <a href="/canvas.html">Canvas</a>
+      <a href="/snow-effect/text.html">Text</a>
+      <a href="/snow-effect/canvas.html">Canvas</a>
     </div>
   </main>
 </body>
